--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
 	"name": "aoc",
 	"version": "1.0.0",
 	"description": "Advent of Code 2022",
+	"module": "index.ts",
+	"type": "module",
 	"scripts": {
-		"start": "ts-node index.ts"
+		"start": "bun run index.ts"
 	},
-	"author": "Matt Dunbar",
-	"license": "ISC",
-	"dependencies": {
-		"@types/node": "^18.11.10",
-		"nodemon": "^2.0.20",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.3"
+	"devDependencies": {
+		"bun-types": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5.0.0"
 	}
 }
