--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-	"name": "aoc",
-	"version": "1.0.0",
-	"description": "Advent of Code 2022",
-	"module": "index.ts",
-	"type": "module",
-	"scripts": {
-		"start": "bun run index.ts"
-	},
-	"devDependencies": {
-		"bun-types": "latest"
-	},
-	"peerDependencies": {
-		"typescript": "^5.0.0"
-	}
+  "name": "aoc",
+  "version": "1.0.0",
+  "description": "Advent of Code",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "start": "bun run index.ts"
+  },
+  "devDependencies": {
+    "@types/minimist": "^1.2.3",
+    "bun-types": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8"
+  }
 }
